# fastllm-py

./: .gitignore  README.md  fastllm-port-brief.md  pyproject.toml
benchmarks/: GRAPH_RESULTS.md  RESULTS.md  results.jsonl  suite.json
docs/: HANDOVER.md  fastllm-internals.md  handoff-4090-ktransformers.md  next-optimizations.md
fastllm_py/: __init__.py  batched.py  benchmark.py  config.py  device_router.py  engine.py  expert_cache.py  expert_router.py  graph_decode.py  model.py  moe.py  quantizer.py  server.py  speculative.py  weights.py
fastllm_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastllm_py/kernels/: __init__.py  fp8.py  marlin.py  moe_int4.py  ops.py
native/: build.sh  fastllm_fp8_block128.cu  marlin_stream_entry.inc
scripts/: bench_fused_moe.py  bench_one.py  bench_qwen30b_5090.py  bench_qwen30b_steady.py  bench_spec_67b.py  bench_suite.py  benchmark_throughput.py  diagnose_moe_decode.py  generate.py  make_reference.py  make_reference_dsv2.py  profile_moe.py  quality_eval.py  run_67b.py  run_67b_graph.py  test_batched.py  test_continuous.py  test_graph_decode.py  test_graph_moe_full.py  test_graph_multigpu.py  test_speculative.py
tests/: test_deepseek.py  test_dense_int4.py  test_dtype_contract.py  test_forward.py  test_fused_ops.py  test_kvcache.py  test_model_zoo.py  test_moe.py  test_moe_int4.py  test_moe_model.py  test_native_kernels.py  test_quantizer.py  test_router.py  test_sampling.py  test_speculative_sampling.py
